k8s-dev-prod-env/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-name-ingress-dev
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: service-name-dev.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-name-dev
                port:
                  number: 80
